Fix: jumping of the text in signin and sign up page

--- a/src/styles/_signin.scss
+++ b/src/styles/_signin.scss
@@ -1,4 +1,5 @@
 $logo-container-text: #fff;
+$authentication-header-height: 180px;
 
 .signin-container {
   flex: 1;
@@ -13,7 +14,7 @@ $logo-container-text: #fff;
   font-size: 2em;
   font-weight: 700;
   justify-content: center;
-  min-height: 25%;
+  min-height: $authentication-header-height;
 
   .icon-home_logo {
     margin-top: 20px;
@@ -25,8 +26,8 @@ $logo-container-text: #fff;
   align-items: center;
   display: flex;
   flex-direction: column;
-  height: calc(100% - 40%);
-  justify-content: center;
+  height: calc(100% - $authentication-header-height);
+  justify-content: flex-start;
   padding: 10px 50px;
 }
 
